--- a/AtkTennisWeb/Views/AdminHome/Index.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/Index.cshtml
@@ -217,7 +217,7 @@
                 <div id="resTableGeneral" class="row">
                     <div class="col-lg-9">
 
-                        <div style="display: none;"><input id="RoleName" type="text" name="name" value="@Role" /></div>
+                        <div style="display: none;"><input id="RoleName" =""="text" name="name" value="@Role" /></div>
                         <div style="display: none;"><input id="doRes" start="@startTime" finish="@finishTime" setTime="@resSetTime" type="text" /></div>
 
                         <div class="card">
