--- a/AtkTennisWeb/Views/SystemSettings/EducationPrivateLessonSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationPrivateLessonSettings.cshtml
@@ -1,4 +1,11 @@
 ﻿@model Helpers.Dto.PartialViewDtos.EducationSettingsViewDto;
+  
+  <style>
+
+        button {
+            border: none !important;
+        }
+    </style>
 
 <div class="content-wrapper">
 
