--- a/AtkTennisWeb/Views/SystemSettings/MemberSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/MemberSettings.cshtml
@@ -1,6 +1,13 @@
 ﻿
 @model Helpers.Dto.PartialViewDtos.MemberSettingsViewDto;
 
+    <style>
+
+        button {
+            border: none !important;
+        }
+    </style>
+
 <div class="content-wrapper">
     <section class="content-header">
         <div class="container-fluid">
