--- a/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
@@ -1,5 +1,12 @@
 ﻿@model Helpers.Dto.PartialViewDtos.ReservationSettingsViewDto;
 
+    <style>
+
+        button {
+            border: none !important;
+        }
+    </style>
+
 <div class="content-wrapper">
     <section class="content-header">
         <div class="container-fluid">
