--- a/AtkTennisWeb/Views/SystemSettings/EducationPerformanceSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationPerformanceSettings.cshtml
@@ -1,4 +1,10 @@
 ﻿@model Helpers.Dto.PartialViewDtos.EducationSettingsViewDto;
+    <style>
+
+        button {
+            border: none !important;
+        }
+    </style>
 
 <div class="content-wrapper">
 
