--- a/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
@@ -1,5 +1,11 @@
 ﻿@model Helpers.Dto.PartialViewDtos.IdentityRoleSettingsViewDto;
 
+<style>
+
+    button {
+        border: none !important;
+    }
+</style>
 
 <div class="content-wrapper">
     <section class="content-header">
@@ -386,7 +392,7 @@
             async: true,
             success: function (res) {
 
-                
+
 
                 if (res == true) {
 
@@ -492,7 +498,7 @@
                 trueList.push($(this).attr("id"));
         })
 
-        
+
 
         $.ajax({
             type: "POST",
