--- a/AtkTennisWeb/Views/AdminHome/Index.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/Index.cshtml
@@ -149,7 +149,7 @@
                         <div style="background-color:#337ab7 !important" class="small-box bg-info">
                             <div style="margin-top:10px" class="inner">
                                 <h3>
-                                    @totalResDebtInf2
+                                    @totalResDebtInf2 ₺
                                 </h3>
                                 <p>Toplam Reservasyon Borçları</p>
                             </div>
@@ -1925,7 +1925,9 @@
 
                                 if (Res.length != 0 && resCancel.length != 0 && Res[0].userId == Res[0].doResUserId) {
 
-
+                                    var scaleList = Enumerable.from(res.courtScaleLists)
+                                        .where(function (x) { return x.code == Res[0].nickName })
+                                        .select(function (x) { return x }).toArray();
 
                                     var memInf = Enumerable.from(res.memberLists)
 
@@ -1936,8 +1938,6 @@
 
                                         .where(function (x) { return x.name.toLowerCase() == memInf[0].role.toLowerCase() })
                                         .select(function (x) { return x }).toArray();
-
-
 
 
 
@@ -2162,6 +2162,10 @@
                                     a = a + parseInt(colspanVal - 1);
 
                                 }
+
+
+
+
 
                                 else
                                     if (period == 4) {
