--- a/AtkTennisWeb/Views/AdminHome/MultiReservationCancel.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/MultiReservationCancel.cshtml
@@ -41,7 +41,7 @@
                             </div>
                         </div>
 
-                        <div  class="card" style="border-radius:40px ; margin-top:15px">
+                        <div id="idCard" class="card" style="border-radius:40px ; margin-top:15px ; display:none">
                             <div class="card-content">
                                 <div class="card-body cleartfix">
                                     <div class="media align-items-stretch">
@@ -49,26 +49,28 @@
                                             <i style="font-size:60px; margin-right:20px ; color:darkmagenta" class="fas fa-id-card"></i>
                                         </div>
                                         <div class="media-body">
-                                            <h4>Kutay Karademir - kk372</h4>
-                                            <span>kutaykrademr</span>
+                                            <div id="identityInf">
+
+                                            </div>
                                         </div>
 
 
 
                                         <div class="align-self-center">
-                                            <button style="border-color:inherit !important; " class="btn btn-dark"  onclick="findAllRes()">Seçili Rezervasyonları İptal Et</button>
+                                            <button style="border-color:inherit !important; " class="btn btn-dark" onclick="cancelAllRes()">Seçili Rezervasyonları İptal Et</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
+                       
+
                         <div id="appendResInf">
 
-
-
-                           
                         </div>
+
+
                     </div>
                 </div>
             </div>
@@ -81,6 +83,33 @@
 
 
 <script>
+
+    var dt = new Date();
+    var dd = String(dt.getDate()).padStart(2, '0');
+    var mm = String(dt.getMonth() + 1).padStart(2, '0');
+    var yyyy = dt.getFullYear();
+
+    var today = yyyy + '-' + mm + '-' + dd;
+
+    $('#dateStart').val(today);
+
+
+    var date = $("#dateStart").val();
+
+    const d = new Date(date);
+    d.setDate(d.getDate() + 7);
+
+    var month = (d.getMonth() + 1);
+    var day = d.getDate();
+    if (month < 10)
+        month = "0" + month;
+    if (day < 10)
+        day = "0" + day;
+
+    var date3 = d.getFullYear() + '-' + month + '-' + day;
+
+    $('#dateFinish').val(date3);
+
     $(document).ready(function () {
 
 
@@ -101,38 +130,14 @@
         }).buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
 
 
-        var dt = new Date();
-        var dd = String(dt.getDate()).padStart(2, '0');
-        var mm = String(dt.getMonth() + 1).padStart(2, '0');
-        var yyyy = dt.getFullYear();
-
-        var today = yyyy + '-' + mm + '-' + dd;
-
-        $('#dateStart').val(today);
-
-
-        var date = $("#dateStart").val();
-
-        const d = new Date(date);
-        d.setDate(d.getDate() + 7);
-
-        var month = (d.getMonth() + 1);
-        var day = d.getDate();
-        if (month < 10)
-            month = "0" + month;
-        if (day < 10)
-            day = "0" + day;
-
-        var date3 = d.getFullYear() + '-' + month + '-' + day;
-
-        $('#dateFinish').val(date3);
+       
 
         findMember();
     });
 
     function findMember() {
 
-        debugger;
+      
 
         $.ajax({
             type: "Get",
@@ -182,6 +187,8 @@
 
     function findAllRes() {
 
+
+
         var userName = $("#findMember").val();
         var startDate = $("#dateStart").val();
         var finishDate = $("#dateFinish").val();
@@ -210,17 +217,37 @@
                 async: true,
                 success: function (res) {
 
-                    debugger;
-
+              
 
                     if (res != "false") {
+
+                        $("#idCard").css({ display: "block" });
+
+                        $("#identityInf").empty();
+
+
+                        row = "";
+
+                        if (memberUserName.length > 2) {
+
+                            row += '<h4>' + memberUserName[1] + ' - ' + memberUserName[2] + '</h4>';
+                            row += '<span>' + memberUserName[0] + '</span>';
+                        }
+                        else {
+
+                            row += '<h4>' + userName + '</h4>';
+                        }
+
+
+
+                        $("#identityInf").append(row);
 
 
                         $("#appendResInf").empty();
 
 
                         row = "";
-                        row += '<div class="card-body">';
+                        row += '<div id="asd" class="card-body">';
                         row += '<table id="resList" class="table table-bordered table-hover">';
                         row += '<thead>';
                         row += '<tr style="text-align:center">';
@@ -254,8 +281,28 @@
 
                             row += '<td>';
                             row += '<div class="custom-control custom-switch">';
-                            row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" id="' + res[i].resId + '">';
-                            row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+
+                            debugger;
+
+                            if (new Date(res[i].resDate) < new Date(today)) {
+
+                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
+                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+                                
+                            }
+
+                            else if (new Date(res[i].resDate) == new Date(today)) {
+
+                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
+                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+
+                            }
+
+                            else {
+                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" id="' + res[i].resId + '">';
+                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+                            }
+                          
                             row += '</div>';
                             row += '</td>';
                             row += '</tr>';
@@ -295,11 +342,11 @@
 
                         $("#appendResInf").empty();
 
-                        alert("Kriterlere Uygun Kayıt Bulunamadı");
+                        alert("Kriterlere Uygun Rezervasyon  Kaydı Bulunamadı");
                     }
 
 
-
+                  
 
                 },
 
@@ -322,6 +369,82 @@
 
             $('#resList input[type=checkbox]:not(:disabled)').prop('checked', false);
         }
+    }
+
+
+
+    function cancelAllRes() {
+
+        debugger;
+
+        var idList = [];
+
+        var idLists = "";
+
+        $('#resList input:checked:not(:disabled)').each(function () {
+  
+              idList.push(this.id);
+        });
+
+        newStr = "";
+
+        for (var i = 0; i < idList.length; i++) {
+
+            if (idList[i] != "allChecked") {
+                var str = idList[i];
+
+                newStr = str + ",";
+
+                var idLists = newStr + idLists;
+            }
+        }
+
+     
+
+        $.ajax({
+            type: "GET",
+            url: '../AdminHome/CancelAllRes',
+            cache: false,
+            data: { "idLists": idLists },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+                debugger;
+
+
+                if (res != "true" ) {
+
+                    $.confirm({
+                        title: "Rezervasyon Tarihi Geçmiş Rezervasyonlar Silinemez /Yada/  Lütfen Seçim Yapınız",
+                        content: "Üye Bulunamadı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+                else {
+                    $.confirm({
+                        title: "Başarılı",
+                        content: "Başarılı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+     
     }
 
 </script>
